Design a user interface to display products, view product details, add favorites, add products to the shopping cart, place orders, and process payments.